# simple-click-entrypoint

./: README.md  pyproject.toml
src/simple_click_entrypoint/: __init__.py  ep.py
